tests222/tests2/test34.out
lli: <stdin>:1:1: error: expected top-level entity
line 3: function a is not defined
^
